crates/apollo-compiler/test_data/diagnostics/0028_interface_definition_with_missing_fields_implements_intrefaces_undefined_interfaces.txt
Error: Transitively implemented interfaces must also be defined on an implementing interface or object
    ╭─[0028_interface_definition_with_missing_fields_implements_intrefaces_undefined_interfaces.graphql:14:1]
    │
  9 │     interface Resource implements Node {
    │                                   ──┬─  
    │                                     ╰─── implementation of Node declared by Resource here
    │ 
 14 │ ╭─▶ interface Image implements Resource & Url{
    ┆ ┆   
 17 │ ├─▶ }
    │ │      
    │ ╰────── Node must also be implemented here
────╯
Error: type does not satisfy interface `Resource`: missing field `width`
    ╭─[0028_interface_definition_with_missing_fields_implements_intrefaces_undefined_interfaces.graphql:14:1]
    │
 11 │       width: Int
    │       ─────┬────  
    │            ╰────── `width` was originally defined by Resource here
    │ 
 14 │ ╭─▶ interface Image implements Resource & Url{
    │ │                              ────┬───  
    │ │                                  ╰───── implementation of interface Resource declared here
    ┆ ┆   
 17 │ ├─▶ }
    │ │      
    │ ╰────── add `width` field to this interface
    │     
    │     Help: An interface must be a super-set of all interfaces it implements
────╯
Error: cannot find type `Url` in this document
    ╭─[0028_interface_definition_with_missing_fields_implements_intrefaces_undefined_interfaces.graphql:14:39]
    │
 14 │ interface Image implements Resource & Url{
    │                                       ─┬─  
    │                                        ╰─── not found in this scope
────╯

